[Client] Worked on issue of user images not showing up in the edit profile and user detail section. - [DONE]

--- a/client/src/styles/user/info.css
+++ b/client/src/styles/user/info.css
@@ -41,7 +41,7 @@
 
 #user-info-back-img {
     width: 100%;
-    height: 100%;
+    height: 256px;
     object-fit: cover;
 }
 
